--- a/approval.tex
+++ b/approval.tex
@@ -1,41 +1,41 @@
-\\begin{titlepage}
-\\begin{center}
-\\vspace*{1cm}
+\begin{titlepage}
+\begin{center}
+\vspace*{1cm}
 
-\\textbf{\\large HALAMAN PERSETUJUAN}\\\\[0.6cm]
-\\textbf{\\large PROPOSAL SKRIPSI}\\\\[0.6cm]
-\\textbf{\\Large PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING}\\\\[0.8cm]
+\textbf{\large HALAMAN PERSETUJUAN}\\[0.6cm]
+\textbf{\large PROPOSAL SKRIPSI}\\[0.6cm]
+\textbf{\Large PERANCANGAN SISTEM PENDETEKSI KECURANGAN PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA TWO-STAGE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING}\\[0.8cm]
 
-Diajukan oleh:\\\\[0.2cm]
-\\textbf{Dimas Maulana}\\\\
-\\textbf{NIM: 2215354026}\\\\[0.8cm]
+Diajukan oleh:\\[0.2cm]
+\textbf{Dimas Maulana}\\
+\textbf{NIM: 2215354026}\\[0.8cm]
 
-Telah diperiksa dan disetujui untuk diujikan\\\\[0.2cm]
+Telah diperiksa dan disetujui untuk diujikan\\[0.2cm]
 Jimbaran, .................. 2026
 
-\\vspace{1cm}
+\vspace{1cm}
 
-\\begin{minipage}[t]{0.45\\textwidth}
-\\centering
-\\textbf{Dosen Pembimbing I}\\\\[1.5cm]
-(....................................)\\\\
+\begin{minipage}[t]{0.45\textwidth}
+\centering
+\textbf{Dosen Pembimbing I}\\[1.5cm]
+(....................................)\\
 NIP. ...............................
-\\end{minipage}
-\\hfill
-\\begin{minipage}[t]{0.45\\textwidth}
-\\centering
-\\textbf{Dosen Pembimbing II}\\\\[1.5cm]
-(....................................)\\\\
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.45\textwidth}
+\centering
+\textbf{Dosen Pembimbing II}\\[1.5cm]
+(....................................)\\
 NIP. ...............................
-\\end{minipage}
+\end{minipage}
 
-\\vspace{1cm}
+\vspace{1cm}
 
-\\textbf{Mengetahui,}\\\\
-\\textbf{Koordinator Program Studi Sarjana Terapan}\\\\
-\\textbf{Teknologi Rekayasa Perangkat Lunak}\\\\[1.5cm]
-\\textbf{Ni Gusti Ayu Putu Harry Saptarini, S.Kom., M.Cs.}\\\\
+\textbf{Mengetahui,}\\
+\textbf{Koordinator Program Studi Sarjana Terapan}\\
+\textbf{Teknologi Rekayasa Perangkat Lunak}\\[1.5cm]
+\textbf{Ni Gusti Ayu Putu Harry Saptarini, S.Kom., M.Cs.}\\
 NIP. 197609042006042001
 
-\\end{center}
-\\end{titlepage}
+\end{center}
+\end{titlepage}
